templates/wac-mesh-020/ambulance-gitops/apps/pfx-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${templateOption:pfx}-ambulance-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /${templateOption:pfx}-api
      filters: 
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: ${templateOption:pfx}-ambulance-webapi
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /${templateOption:pfx}-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: ${templateOption:pfx}-openapi-ui
          port: 80
    - matches:
        - path:
            type: Exact
            value: /${templateOption:pfx}-openapi
      filters: 
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: ${templateOption:pfx}-ambulance-webapi
          port: 80
